Fix audio build with video disabled https://bugs.webkit.org/show_bug.cgi?id=153134

Patch by Olivier Blin <olivier.blin@softathome.com> on 2016-01-15
Reviewed by Michael Catanzaro.

Build fails when WebAudio is enabled but VIDEO disabled.

No new tests since this is a build fix only.

* platform/audio/PlatformMediaSession.cpp:
* platform/audio/PlatformMediaSession.h:
* platform/audio/PlatformMediaSessionManager.cpp:
* testing/Internals.cpp:
(WebCore::Internals::setAudioContextRestrictions):

Canonical link: https://commits.webkit.org/171238@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@195154 268f45cc-cd09-0410-ab3c-d52691b4dbfc